--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,19 @@ baseURL = 'https://nimpylib.org/'
 languageCode = 'en-us'
 title = 'Nim PyLib Site'
 theme = 'ananke'
+
+
+[menus]
+  [[menus.main]]
+    name = 'Docs'
+    pre = '<i class="fa fa-heart"></i>'
+    url = 'https://docs.nimpylib.org/'
+
+  [[menus.main]]
+    name = 'Wiki'
+    pre = '<i class="fa fa-heart"></i>'
+    url = 'https://github.com/nimpylib/pylib/wiki'
+
+[Params]
+  RepoURL = 'https://github.com/nimpylib/pylib'  
+
