--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,7 +58,8 @@ jobs:
         run: |
           hugo \
             --gc \
-            --minify
+            --minify \
+            --baseURL "${{ github.event.repository.homepage }}"  
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
