--- a/hugo.toml
+++ b/hugo.toml
@@ -10,6 +10,10 @@ theme = 'ananke'
     url = 'https://docs.nimpylib.org/'
 
   [[menus.main]]
+    name = "Donate"
+    url = "/donate/"
+
+  [[menus.main]]
     name = 'Repo'
     url = 'https://github.com/nimpylib/pylib'
 
