impr(about): code, use GetRemote over copy; chore(ci): update to hugo 0.143.1

--- a/hugo.toml
+++ b/hugo.toml
@@ -31,6 +31,11 @@ theme = 'ananke'
 
   read_more_copy = "details"  # default: i18n "readMore" -> "read more"
 
+  [[Params.codeRepo]]
+    user = "nimpylib"
+    repo = "pylib"
+    branch = "master"
+
 
 # allow inline html in Markdown
 [markup]
